--- a/hp.css
+++ b/hp.css
@@ -116,15 +116,16 @@ body {
   opacity: 0.7;
   transition: 0.4s;
   text-decoration: wavy;
+  border-radius:5px;
   cursor:pointer;
   float:left;
+  margin:3px;
 }
 .content-button:hover {background-color: rgb(80, 175, 175)}
 .course-button {
   background-color: rgb(73, 145, 145);
   border: none;
   color: rgb(216, 213, 208);
-  padding: 10px;
   width:210px;
   height:75px;
   font-size:17px;
@@ -133,9 +134,14 @@ body {
   transition: 0.4s;
   text-decoration: wavy;
   cursor:pointer;
+  padding: 10px;
   float:left;
   border-radius:5px;
   margin:3px;
+}
+button.course-button:focus{
+  background-color:rgb(21, 29, 29);
+  opacity:1;
 }
 .course-button:hover {opacity: 1}
 .footer {
@@ -199,7 +205,7 @@ button.fb3{
   
   margin-left:16px; 
 }
-
-  
-
-  .flow-button:hover {background-color: rgb(80, 175, 175)}
+button.flow-button:focus{
+  background-color:rgb(190, 90, 185);
+}
+.flow-button:hover {background-color: rgb(80, 175, 175)}
