--- a/hp.css
+++ b/hp.css
@@ -47,7 +47,7 @@ body {
   border-bottom-right-radius:4px;
 }
 .v-nav-bar {
-  background-color:white;
+  background-color:rgb(117, 117, 117);
   height:192px;
   width:7.83%;
   cursor:pointer;
@@ -180,15 +180,14 @@ button.course-button:focus{
   display:block;
   background-color:rgb(73, 145, 145);
   color:rgb(216, 213, 208);
-  border:none;
   padding:10px;
+  border:none;
   width:210px;
   height:70px;
   font-size:15px;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   opacity:0.7;
   transition:0.4s;
-  text-decoration:wavy;
   text-align:center;
   border-radius:5px;
   cursor:pointer;
@@ -206,6 +205,14 @@ button.fb3{
   margin-left:16px; 
 }
 button.flow-button:focus{
-  background-color:rgb(190, 90, 185);
+  background-color:rgb(58, 75, 75);
+  opacity:1;
 }
 .flow-button:hover {background-color: rgb(80, 175, 175)}
+
+.arrow{
+  width:110px;
+  height:50px;
+  position:absolute;
+  z-index:1111;
+}
