--- a/hp.css
+++ b/hp.css
@@ -73,26 +73,29 @@ body {
   text-align:center;
 }
 .dropdown {
-  position:relative;
   display:inline-block;
 }
 .dropdown-content {
   display:none;
-  position:absolute;
-  background-color:rgb(35, 153, 153);
-  box-shadow:0px 8px 16px 0px rgba(0,0,0,0.2);
+  position:static;
+}
+.dropdown-content > .pw{
+  width:140px;
+  float:right;
+  min-height:10px;
+  font-size:15px;
 }
 .dropdown-content a {
-  color:rgb(216, 213, 208);
+  color:rgb(242, 247, 248);
   padding: 12px 16px;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-decoration:none;
   font-size:10px;
   width:68px;
   text-align:center;
-  display: block;
+  display:block;
 }
-.dropdown-content a:hover {background-color: rgb(80, 175, 175)}
+.dropdown-content a:hover {background-color: rgb(92, 167, 167); border-radius:5px;}
 .dropdown:hover .dropdown-content {display: block;}
 .content-bar {
   display:none;
@@ -109,19 +112,18 @@ body {
   background-color: rgb(73, 145, 145);
   border: none;
   color: rgb(216, 213, 208);
-  width:350px;
-  height:100px;
+  width:520px;
+  height:110px;
   font-size: 30px;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   opacity: 0.7;
   transition: 0.4s;
-  text-decoration: wavy;
   border-radius:5px;
   cursor:pointer;
   float:left;
-  margin:3px;
+  margin:8px;
 }
-.content-button:hover {background-color: rgb(80, 175, 175)}
+.content-button:hover {background-color: rgb(80, 175, 175);}
 .course-button {
   background-color: rgb(73, 145, 145);
   border: none;
@@ -213,6 +215,7 @@ button.flow-button:focus{
 .arrow{
   width:110px;
   height:50px;
+  display:none;
   position:absolute;
   z-index:1111;
 }
